Add production operational tooling and enhanced trading UI
Expand Makefile with comprehensive cluster management: install/deploy commands,
OS optimization for low latency, rolling updates with zero downtime, systemd
service integration, snapshot triggers, and status monitoring. Add new UI
components for cluster administration, market selection, order forms, and
real-time market stats. Enhance backend with market data broadcasting and
improved WebSocket subscription handling.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>